# geometric_conditioned_flows

./: .gitignore  README.md  benchmark_real.ipynb  benchmark_toy.ipynb  pyproject.toml  train_ae_toy.ipynb  train_fm_nbae_sciplex.ipynb  train_fm_sciplex.ipynb  train_fm_toy.ipynb  train_nbae_sciplex.ipynb  train_ode_nbae_sciplex.ipynb  train_ode_sciplex.ipynb  train_ode_toy.ipynb
data/: __init__.py  dataset.py  simulations.py  space.py  splitters.py  types.py
evaluation/: metrics.py
models/: __init__.py  autoencoder.py  baselines.py  flow.py  mean_flow.py  vector_fields.py
training/: __init__.py  losses.py  trainer_ae.py  trainer_flow_matching.py  trainer_mean_flow.py  trainer_neural_ode.py
