[project]
name = "flatcfm"
version = "0.1.0"
authors = [
    { name = "David Crair", email = "david.crair@yale.edu" },
]
description = "A senior thesis project for flow matching on flat latent spaces for single-cell perturbation modeling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.7",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "pertpy>=1.0.4",
    "phate>=2.0.0",
    "pip>=26.0",
    "plotly>=6.6.0",
    "pot>=0.9.6.post1",
    "scanpy>=1.11.5",
    "torch>=2.9.1",
    "torchdiffeq>=0.2.5",
]
